[gd_scene load_steps=2 format=3 uid="uid://deu3cppa6tyor"]

[ext_resource type="Script" path="res://addons/IntAud/editor/ParamEditor/bus_display.gd" id="1_b5q6n"]

[node name="BusDisplay" type="Control"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b5q6n")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BusName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master"
text_overrun_behavior = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EffectsListScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EffectsList" type="VBoxContainer" parent="VBoxContainer/EffectsListScrollContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
